app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: demo
  labels:
    app: hello-world
spec:
  type: NodePort
  selector:
    app: hello-world
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
